# vagrant-box-templates

./: .gitignore  CHANGELOG.md  README.md  Vagrantfile  ansible.cfg  bootstrap.sh  bootstrap.yml  environment.yml.j2  playbook.yml  prep_host_vars.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  unit-test.sh  utils.py
Alpine/: Vagrantfile  provision.sh
Alpine/3.4/: nodes.yml  prep.sh
Alpine/3.5/: bootstrap.bat  nodes.yml  prep.sh
Arch/server/: nodes.yml
Centos/6.5/: README.md  Vagrantfile  bootstrap.yml  nodes.yml
Centos/7/: nodes.yml
Centos/scripts/: box_pre_build.yml  box_pre_build_ansible.sh
Debian/: 10  11  7  8  9
Debian/scripts/: box_pre_build.yml  box_pre_build_ansible.sh
Fedora/scripts/: box_pre_build.yml  box_pre_build_ansible.sh
FreeBSD/11.0/: Vagrantfile  nodes.yml  prep.sh
FreeBSD/12.0/: Vagrantfile  nodes.yml  prep.sh
LinuxMint17/: README.md  bootstrap_ansible.sh
LinuxMint17/cinnamon/: Vagrantfile  ansible.cfg  nodes.yml  playbook.yml  prep.sh  site.yml
Ubuntu/: 12.04  14.04  14.10  15.04  15.10  16.04  16.10  17.04  17.10  18.04  18.10  19.04  19.10  20.04
Ubuntu/scripts/: box_cleanup_build.yml  box_pre.sh  box_pre_build.yml  box_pre_build_ansible.sh
VyOS/1.1.8/: README.md  nodes.yml
Windows/Windows_10/: nodes.yml
Windows/Windows_2008_r2/: nodes.yml
Windows/Windows_2012_r2/: Vagrantfile  cleanup.bat  hosts  nodes.yml  playbook.yml
playbooks/: bootstrap.yml  playbook.yml  prep_host_vars.yml  test.yml
scripts/: bootstrap.sh  cleanup.sh  test.sh
(+229 files in other folders)
