[tool.poetry]
name = "vagrant-box-templates"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.0.0"
ansible-lint = "^5.1.3"
docker = "^5.0.2"
mkdocs = "^1.2.2"
molecule = "^3.5.1"
pip-tools = "^6.3.0"
yamllint = "^1.26.3"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pycodestyle = "^2.7.0"
pylint = "^2.11.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
